feat: added crud for mongodb
